samples/_failures_safe/1761275234_ab3543_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8628a4f.c: In function ‘main’:
./samples/SAFE/__tmp_d8628a4f.c:135:12: error: missing terminating " character
  135 |     printf("\nEnter minimum level to filter (0=ERROR, 1=
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d8628a4f.c:135:5: error: expected expression at end of input
  135 |     printf("\nEnter minimum level to filter (0=ERROR, 1=
      |     ^~~~~~
./samples/SAFE/__tmp_d8628a4f.c:135:5: error: expected declaration or statement at end of input
